# .bashrc

./: .XCompose  .bash_profile  .bashrc  .dunstrc  .editorconfig  .git-completion.bash  .gitconfig  .gitignore  .gitignore_global  .gitmodules  .luacheckrc  .p10k.zsh  .pam_environment  .pre-commit-config.yaml  .psqlrc  .pylintrc  .shellcheckrc  .shrc  .stylua.toml  .styluaignore  .tmux.conf  .vimrc  .zshenv  .zshrc  README.md  flake.nix  pyproject.toml  requirements-dev.txt  stylua.toml
.bin/: guest-wifi-network-access.sh  init-user-env.sh  sshrc
.claude/: CLAUDE.md
.config/: mimeapps.list  pylintrc
.config/atuin/: config.toml
.config/autostart/: gnome-keyring-ssh.desktop  snap-userd-autostart.desktop  update-manager.desktop
.config/containers/: containers.conf  registries.conf
.config/environment.d/: apps.conf
.config/fcitx5/: config  profile
.config/flameshot/: flameshot.ini
.config/git/: config  ignore
.config/i3/: config
.config/i3status/: config
.config/jjui/: config.toml
.config/nix/: dev.nix  docker.nix
.config/nvim/: PLUGIN_AUDIT_2026_05.md  coc-settings.json  init.vim  lazy-lock.json
.kube/: kubie.yaml
apps/: Cargo.toml  flake.nix
apps/comment-lsp/: Cargo.toml
apps/comment-lsp/src/: agent.rs  cache.rs  main.rs  rpc.rs
apps/common/: Cargo.toml
apps/common/src/: lib.rs
apps/github/: Cargo.toml
apps/github/src/: lib.rs
apps/jj/: Cargo.toml
apps/jj-tools/: Cargo.toml
apps/jj-tools/src/: main.rs
apps/jj/src/: lib.rs
apps/jjui-tools/: Cargo.toml
apps/jjui-tools/src/: main.rs
scripts/: test.sh
(+136 files in other folders)
