[workspace]
resolver = "3"
members = ["common", "comment-lsp", "jj", "github", "jjui-tools", "jj-tools"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release]
strip = true
