[package]
name = "comment-lsp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "comment-lsp"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
common = { path = "../common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
